# azoth

./: Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml
src/: cli.rs  main.rs
