[package]
name = "azoth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
ratatui = { version = "0.30.0", default-features = false, features = ["termion"] }
rig-core = "0.34.0"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
